# kb

./: .envrc.sample  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yaml
src/: config.rs  debug.rs  heartbeat.rs  hid.rs  key.rs  main.rs  matrix.rs  oled.rs  pipeline.md  rgb.rs  rotary.rs  split.rs  status.rs  stream.rs  util.rs
src/keyboard/: mod.rs
src/keyboard/default/: mod.rs
src/keyboard/default/layout/: default.rs  mod.rs
src/keyboard/kb_dev/: mod.rs
src/keyboard/kb_dev/layout/: default.rs  mod.rs
src/keyboard/quadax_rift/: mod.rs
src/keyboard/quadax_rift/layout/: default.rs
src/processor/: keymap.rs  mapper.rs  mod.rs
src/processor/bitmap/: debounce.rs  mod.rs  none.rs
src/processor/events/: mod.rs  none.rs  replace.rs  system.rs
src/processor/events/rgb/: animation.rs  mod.rs
src/processor/input/: debounce.rs  none.rs
src/remote/: mod.rs
src/remote/transport/: mod.rs  uart.rs
